# portfolio

./: .gitignore  README.md  config.py  main.py  pyproject.toml
constants/: index.ts
dev/: delete_data.py  test.py
src/ai_server/: __init__.py  constants.py
src/ai_server/ai/: runner.py
src/ai_server/ai/agents/: agent.py
src/ai_server/ai/providers/: llm_provider.py  openai_provider.py
src/ai_server/ai/tools/: tools.py
src/ai_server/api/: routes.py
src/ai_server/api/dto/: chat.py
src/ai_server/api/exceptions/: error.py  openai_exceptions.py  redis_exceptions.py  schema_exceptions.py
src/ai_server/redis/: client.py  embedding_cache.py  langchain_vectorizer.py  semantic_cache.py  session_manager.py
src/ai_server/schemas/: message.py  tools.py
src/ai_server/utils/: general.py
